# RL-Cookbook

./: .gitmodules  LICENSE.md  README.md  __init__.py  main.py  requirements.txt  run_experiment.py  setup.cfg  setup.py  sweep_agent.py  testing.ipynb  testing.py
agents/: __init__.py  base.py  exploration.py  rainbow.py
agents/representation/: __init__.py  state_prediction.py
envs/: __init__.py  wrappers.py
notebooks/: VISR.ipynb  goal_conditioned_policies.ipynb  old_VISR.ipynb
results/: analysis.ipynb  import_data.py
src/: __init__.py
src/agents/: __init__.py  base.py  dqn.py  exploration.py  ppo.py  rainbow.py  register.py  representation.py
src/agents/Rainbow/src/: agent.py  (+3 more)
src/agents/representation/: __init__.py  future_prediction.py  state_prediction.py
src/envs/: __init__.py  creation.py  data.py  simulation.py  wrappers.py
src/experiments/: argument_handling.py  register.py  training.py
src/models/: __init__.py  activations.py  base.py
src/rl_cookbook.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rl_cookbook/agents/: base.py  dqn.py  exploration.py  ppo.py  rainbow.py  representation.py
src/rl_cookbook/envs/: creation.py  data.py  simulation.py  wrappers.py
src/rl_cookbook/experiments/: argument_handling.py  register.py  training.py
src/rl_cookbook/models/: activations.py  base.py
src/training/: simulation.py
src/utils/: __init__.py  argument_handling.py  constants.py
sweep_configs/: baseline_sweep.yaml  baseline_sweep_redo.yaml  baseline_sweep_redo_test.yaml  first_sweep.yaml  test_sweep.yaml
training/: simulation.py
(+5 files in other folders)
