[metadata]
name = rl-cookbook
version = 0.0.1
author = Edan Meyer
description = A cookbook of Reinforcement Learning methods and utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ejmejm/RL-Representation
project_urls =
    Bug Tracker = https://github.com/ejmejm/RL-Representation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src